--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
@@ -226,14 +226,13 @@
 											id="courseList"
 											hflex="1"
 											mold="paging"
-											onSelect="@command('courseOnSelectCmd')"
 											selectedItem="@bind(vm.courseSelected)"
 											pageSize="10"
 											oddRowSclass="listbox-odd-row"
 											emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 											class="listbox" >
 									        <auxhead>
-									            <auxheader class="header" colspan="4" >
+									            <auxheader class="header" colspan="5" >
 									            	<hbox hflex="1" height="42px" align="center" >
 										            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 									            			<hbox vflex="1" align="center">
@@ -251,20 +250,32 @@
 									        </auxhead>
 											
 									        <listhead>
-									            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" />
-									            <listheader label="${c:l('txt.ui.common.description')}" sort="auto(description)" align="left" />
-									            <listheader label="${c:l('txt.ui.common.lessons')}" align="left"  />
+									            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" hflex="2" />
+									            <listheader label="${c:l('txt.ui.common.courseLocation2')}" sort="auto(description)" align="left" hflex="3" />
+									            <listheader label="${c:l('txt.ui.common.lessons')}" align="left" hflex="2" />
+									            <listheader width="25px" />
 									            <listheader hflex="min"/>
 									        </listhead>
 									         
 									        <template name="model" var="item">
 									            <listitem>
 									                <listcell label="${item.name}" />
-									                <listcell label="${item.description}" />
+									                <listcell label="${item.courseLocation.name}, ${item.courseLocation.description}" />
 									                <listcell>
 									                	<vbox vflex="1" align="center" forEach="${item.lessonList}" >
 									                		<label value="${vm.getLessonToUi(each)}"/>
 														</vbox>
+									                </listcell>
+									                <listcell>
+										                <vbox>
+															<!-- Popis -->
+										                	<a iconSclass="z-icon-info-circle" popup="descriptionPopup_${item.uuid}, position=after_end" style="font-size: large;" tooltiptext="${c:l('txt.ui.common.description2')}" />
+										                	<popup id="descriptionPopup_${item.uuid}">
+														    	<vbox style="margin: 5px;">
+														    		<label value="${item.description}"/>
+														    	</vbox>
+														    </popup>
+								                		</vbox>
 									                </listcell>
 									                <listcell>
 									                	<button label="${c:l('txt.ui.common.attendance')}" onClick="@command('showAttendanceCmd', course=item)" />
@@ -277,7 +288,7 @@
 									    <style src="/resources/css/spreadsheet_grid.css" />
 										<grid sclass="grid-spreadsheet" height="480px" 
 											style="border: none; overflow:scroll; margin-top: 20px;"
-											visible="@load(vm.courseSelected ne null)"
+											visible="@load(vm.showLessonStats)"
 											model="@load(vm.lessonStats.learnLessonsStatsList)">
 											
 											<columns>
