--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/kurz.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/kurz.zul
@@ -74,7 +74,7 @@
 										style="height: 30px;"
 										multiline="true"
 										tabindex="2"
-										height="55px"
+										height="115px"
 										hflex="1" />
 									<vbox hflex="2" style="height: 30px">
 										
@@ -194,7 +194,7 @@
 						iconSclass="z-icon-check" />
 				</hlayout>
 				
-				<tabbox id="tb" hflex="1" visible="@load(vm.updateMode)" style="margin-top: 20px;">
+				<tabbox id="tb" hflex="1" visible="@load(vm.updateMode)" style="margin-top: 20px; margin-bottom: 20px;">
 				    <tabs id="tabs">
 				        <tab id="courseParticipants" label="${c:l('txt.ui.common.participants')}" iconSclass="z-icon-child" />
 				        <tab id="lessons" label="${c:l('txt.ui.common.lessons')}" iconSclass="z-icon-calendar" />
