--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
@@ -72,7 +72,7 @@
 					
 			        <listhead>
 			            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" hflex="1" />
-			            <listheader label="${c:l('txt.ui.common.description2')}" sort="auto(description)" align="left" hflex="1" />
+<!-- 			            <listheader label="${c:l('txt.ui.common.description2')}" sort="auto(description)" align="left" hflex="1" /> -->
 			            <listheader label="${c:l('txt.ui.common.participantCount')}" sort="auto(participantListCount)" align="center" hflex="min"  />
 			            <listheader width="140px" align="center" />
 			        </listhead>
@@ -80,7 +80,7 @@
 			        <template name="model">
 			            <listitem>
 			                <listcell label="${each.name}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="${each.description}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
+<!-- 			                <listcell label="${each.description}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" /> -->
 			                <listcell label="${each.participantListCount}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell>
 			                	<button label="Výuka" onClick="@command('courseLearningLessonsCmd', uuid=each.uuid)" />
